# System-Control-and-Programming-Industrial-Robotic-for-HWASHI

./: 3dmap_set.txt  4_calibration_fisheye.py  6_dm_video.py  7_2d_map.py  CSV_XYZ.py  Docked_UI.py  README.md  SECURITY.md  _init_.py  avaliablealgotitm  color_vision.py  connect_robot  cycle_time.py  external_axes.py  flow_IO.py  keyboard_controlled.py  libraries.py  modeling_robot_kinematics.py  motor_control.py  motor_test.py  postprocessor Hwashi.py  programcall.py  robodk.py  robot.py  storage.ide-shm  storage.ide-wal  synhronize_robot.py  tcp_axes.py  update_axis_optimization.py  update_robot_working_tools.py  vision_image_analize.py  vision_system(for connected).py  welding_test.py
RobotTeaching/: Inverse_kine.cpp  Inverse_kine.h  NIDAQmx.h  NIDAQmx.lib  RobotTeaching.aps  RobotTeaching.rc  RobotTeaching.vcxproj.filters  RobotTeachingDlg.cpp  RobotTeachingDlg.h  stdafx.h  test_axes.cfg
core_hwashi_system_/: 1-Boot-NoEmul.img  build-essential_12.8ubuntu3_amd64.deb  filesystem.manifest  filesystem.size
crypto_system(for security)/: crypto_main. b.txt  modul_crypto.bf
driver_robots_hwashi/u_description/: CMakeLists.txt  package.xml
driver_robots_hwashi/u_description/cfg/: view_robot.rviz
driver_robots_hwashi/u_description/urdf/: common.gazebo.xacro  ur.gazebo.xacro  ur.transmission.xacro
driver_robots_hwashi/u_driver/: package.xml  prog_reset  setup.py
driver_robots_hwashi/u_driver/cfg/: URDriver.cfg
driver_robots_hwashi/u_driver/src/ur_driver/: deserializeRT.py  driver.py  io_interface.py  testRT_comm.py  test_comm.py
(+15 files in other folders)
