<?xml version="1.0"?>
<package format="2">
  <name>ur_description</name>
  <version>1.2.7</version>
  <description>
      URDF description for Hwashi Industral Robots
  </description>

  <author>Alexander Bondar(OxideDevX)</author>
  <maintainer email="alexanderbond1966@gmail.com">Alexander Bondar(OxideDevX)</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
