<?xml version="1.0"?>
<package format="2">
  <name>ur_driver</name>
  <version>1.2.7</version>
  <description>
     Driver Linux for Hwashi Industrial Robot
  </description>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>ur_msgs</exec_depend>
  <exec_depend>python-lxml</exec_depend>
</package>
